// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Service test createProduct test 1`] = `
Object {
  "id": "5",
  "maxprice": 50000,
  "minprice": 22000,
  "querystring": "camera",
  "rating": 4,
}
`;

exports[`Service test createProduct test 2`] = `null`;

exports[`Service test getProduct test 1`] = `
Object {
  "_id": "1",
  "brand": "HP",
  "categories": Array [
    "Laptop",
    "Electronic",
    "Device",
  ],
  "currentprice": 35000,
  "description": "Brand new device notebook from HP",
  "name": "HP Notebook 2020",
  "originalprice": 45000,
  "rating": 4.5,
  "seller": "VienThongA",
}
`;

exports[`Service test getProduct test 2`] = `null`;

exports[`Service test getProducts test 1`] = `
Array [
  Object {
    "_id": "0",
    "brand": "Apple",
    "categories": Array [
      "Laptop",
      "Electronic",
      "Apple",
    ],
    "currentprice": 30000,
    "description": "Macbook new design 2018",
    "name": "Macbook air 2018",
    "originalprice": 50000,
    "rating": 5,
    "seller": "FPT",
  },
]
`;

exports[`Service test getProducts test 2`] = `
Array [
  Object {
    "_id": "2",
    "brand": "Cannon",
    "categories": Array [
      "Camera",
      "Electronic",
      "Device",
    ],
    "currentprice": 38000,
    "description": "New camera 2020",
    "name": "Cannon D500",
    "originalprice": 40000,
    "rating": 4.5,
    "seller": "FPT",
  },
]
`;

exports[`Service test getProducts test 3`] = `
Array [
  Object {
    "_id": "1",
    "brand": "HP",
    "categories": Array [
      "Laptop",
      "Electronic",
      "Device",
    ],
    "currentprice": 35000,
    "description": "Brand new device notebook from HP",
    "name": "HP Notebook 2020",
    "originalprice": 45000,
    "rating": 4.5,
    "seller": "VienThongA",
  },
  Object {
    "_id": "2",
    "brand": "Cannon",
    "categories": Array [
      "Camera",
      "Electronic",
      "Device",
    ],
    "currentprice": 38000,
    "description": "New camera 2020",
    "name": "Cannon D500",
    "originalprice": 40000,
    "rating": 4.5,
    "seller": "FPT",
  },
]
`;

exports[`Service test getProducts test 4`] = `
Array [
  Object {
    "_id": "1",
    "brand": "HP",
    "categories": Array [
      "Laptop",
      "Electronic",
      "Device",
    ],
    "currentprice": 35000,
    "description": "Brand new device notebook from HP",
    "name": "HP Notebook 2020",
    "originalprice": 45000,
    "rating": 4.5,
    "seller": "VienThongA",
  },
  Object {
    "_id": "2",
    "brand": "Cannon",
    "categories": Array [
      "Camera",
      "Electronic",
      "Device",
    ],
    "currentprice": 38000,
    "description": "New camera 2020",
    "name": "Cannon D500",
    "originalprice": 40000,
    "rating": 4.5,
    "seller": "FPT",
  },
]
`;

exports[`Service test getProducts test 5`] = `
Array [
  Object {
    "_id": "0",
    "brand": "Apple",
    "categories": Array [
      "Laptop",
      "Electronic",
      "Apple",
    ],
    "currentprice": 30000,
    "description": "Macbook new design 2018",
    "name": "Macbook air 2018",
    "originalprice": 50000,
    "rating": 5,
    "seller": "FPT",
  },
]
`;

exports[`Service test getProducts test 6`] = `
Array [
  Object {
    "_id": "0",
    "brand": "Apple",
    "categories": Array [
      "Laptop",
      "Electronic",
      "Apple",
    ],
    "currentprice": 30000,
    "description": "Macbook new design 2018",
    "name": "Macbook air 2018",
    "originalprice": 50000,
    "rating": 5,
    "seller": "FPT",
  },
  Object {
    "_id": "2",
    "brand": "Cannon",
    "categories": Array [
      "Camera",
      "Electronic",
      "Device",
    ],
    "currentprice": 38000,
    "description": "New camera 2020",
    "name": "Cannon D500",
    "originalprice": 40000,
    "rating": 4.5,
    "seller": "FPT",
  },
  Object {
    "_id": "1",
    "brand": "HP",
    "categories": Array [
      "Laptop",
      "Electronic",
      "Device",
    ],
    "currentprice": 35000,
    "description": "Brand new device notebook from HP",
    "name": "HP Notebook 2020",
    "originalprice": 45000,
    "rating": 4.5,
    "seller": "VienThongA",
  },
]
`;

exports[`Service test getProducts test 7`] = `
Array [
  Object {
    "_id": "0",
    "brand": "Apple",
    "categories": Array [
      "Laptop",
      "Electronic",
      "Apple",
    ],
    "currentprice": 30000,
    "description": "Macbook new design 2018",
    "name": "Macbook air 2018",
    "originalprice": 50000,
    "rating": 5,
    "seller": "FPT",
  },
  Object {
    "_id": "1",
    "brand": "HP",
    "categories": Array [
      "Laptop",
      "Electronic",
      "Device",
    ],
    "currentprice": 35000,
    "description": "Brand new device notebook from HP",
    "name": "HP Notebook 2020",
    "originalprice": 45000,
    "rating": 4.5,
    "seller": "VienThongA",
  },
  Object {
    "_id": "2",
    "brand": "Cannon",
    "categories": Array [
      "Camera",
      "Electronic",
      "Device",
    ],
    "currentprice": 38000,
    "description": "New camera 2020",
    "name": "Cannon D500",
    "originalprice": 40000,
    "rating": 4.5,
    "seller": "FPT",
  },
]
`;
